añadiendo apariencia al registro

--- a/css/style.css
+++ b/css/style.css
@@ -8001,3 +8001,24 @@ footer {
   padding: 0 5px;
   vertical-align: top;
   margin-left: -10px; }
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5rem 0; }
+
+fieldset {
+  display: flex;
+  flex-direction: column;
+  width: 30rem;
+  gap: 1rem;
+  padding: 1rem;
+  border-color: #5B84E3;
+  border-style: groove;
+  border-width: 3px;
+  margin: auto; }
+
+legend {
+  font-weight: 700;
+  font-size: 2.5rem; }
