--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,4 +2,4 @@
 @import "./base/reset","./base/variables","./base/typography";
 @import "./components/buttons","./components/hero";
 @import "./layout/header","./layout/body","./layout/footer";
-@import "./pages/home";
+@import "./pages/home","./pages/register";
